ajustes na documentação
autenticação, tipo de parametro GET
