# storage/api-docs/api-docs.json
@@ -2,12 +2,15 @@
     "openapi": "3.0.0",
     "info": {
         "title": "API",
-        "description": "API que busca e cadastra pessoas no banco de dados. Criada com Laravel e JWT.",
+        "description": "API REST que busca e cadastra pessoas no banco de dados. Criada com Laravel e JWT.",
         "version": "1.0.0"
     },
     "paths": {
         "/api/get/{id}": {
             "get": {
+                "tags": [
+                    "Pessoas"
+                ],
                 "summary": "Busca uma pessoa do banco de dados",
                 "operationId": "a1242ab196b5e579b6b627906cc20ad5",
                 "parameters": [
@@ -17,7 +20,7 @@
                         "description": "Id da pessoa a ser buscada",
                         "required": true,
                         "schema": {
-                            "type": "int"
+                            "type": "integer"
                         }
                     }
                 ],
@@ -38,11 +41,19 @@
                     "401": {
                         "description": "Sem autenticação"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/getAll": {
             "get": {
+                "tags": [
+                    "Pessoas"
+                ],
                 "summary": "Busca todas as pessoas registradas no banco de dados",
                 "operationId": "6adb876cd4fe6eed93757c541f145a09",
                 "responses": {
@@ -68,11 +79,19 @@
                     "401": {
                         "description": "Sem autenticação"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/create": {
             "post": {
+                "tags": [
+                    "Pessoas"
+                ],
                 "summary": "Adiciona uma nova pessoa no banco de dados",
                 "operationId": "09f070d0c00146b340f50c192edb0c53",
                 "requestBody": {
@@ -99,7 +118,12 @@
                     "401": {
                         "description": "Sem autenticação"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         }
     },
